--- a/OpenVASP.Assets/service.yaml
+++ b/OpenVASP.Assets/service.yaml
@@ -5,7 +5,7 @@ metadata:
     app: assets
     tier: Service
   name: assets
-  namespace: openvasp
+  namespace: services
 spec:
   ports:
   - name: http
