--- a/OpenVASP.Assets/deployment.yaml
+++ b/OpenVASP.Assets/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     tier: Service
     version: '0.4'
   name: assets
-  namespace: openvasp
+  namespace: services
 spec:
   revisionHistoryLimit: 1
   minReadySeconds: 10
