--- a/OpenVASP.Scheduler/deployment.yaml
+++ b/OpenVASP.Scheduler/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     tier: Service
     version: '0.5'
   name: scheduler
-  namespace: openvasp
+  namespace: services
 spec:
   revisionHistoryLimit: 1
   minReadySeconds: 10
