--- a/OpenVASP.Statistics/service.yaml
+++ b/OpenVASP.Statistics/service.yaml
@@ -5,7 +5,7 @@ metadata:
     app: statistics
     tier: Service
   name: statistics
-  namespace: openvasp
+  namespace: services
 spec:
   ports:
   - name: http
