--- a/OpenVASP.Transactions/service.yaml
+++ b/OpenVASP.Transactions/service.yaml
@@ -5,7 +5,7 @@ metadata:
     app: transactions
     tier: Service
   name: transactions
-  namespace: openvasp
+  namespace: services
 spec:
   ports:
   - name: http
