--- a/OpenVASP.Users/service.yaml
+++ b/OpenVASP.Users/service.yaml
@@ -5,7 +5,7 @@ metadata:
     app: users
     tier: Service
   name: users
-  namespace: openvasp
+  namespace: services
 spec:
   ports:
   - name: http
