--- a/OpenVASP.Vasps/deployment.yaml
+++ b/OpenVASP.Vasps/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     tier: Service
     version: '0.10'
   name: vasps
-  namespace: openvasp
+  namespace: services
 spec:
   revisionHistoryLimit: 1
   minReadySeconds: 10
