--- a/OpenVASP.Vasps/service.yaml
+++ b/OpenVASP.Vasps/service.yaml
@@ -5,7 +5,7 @@ metadata:
     app: vasps
     tier: Service
   name: vasps
-  namespace: openvasp
+  namespace: services
 spec:
   ports:
   - name: http
