--- a/OpenVASP.Whisper/service.yaml
+++ b/OpenVASP.Whisper/service.yaml
@@ -5,7 +5,7 @@ metadata:
     app: whisper
     tier: Service
   name: whisper
-  namespace: openvasp
+  namespace: services
 spec:
   ports:
   - name: http
