--- a/OpenVASP.Whisper/deployment.yaml
+++ b/OpenVASP.Whisper/deployment.yaml
@@ -68,4 +68,5 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
-
+      nodeSelector:
+        type: services
